0.32.0/guides/backends/sftp/index.md
# SFTP Backend

The SFTP backend stores files on any SSH/SFTP server using [paramiko](https://www.paramiko.org/). Unlike fsspec's `SFTPFileSystem`, it gives you explicit control over host key verification and handles Azure Key Vault PEM quirks out of the box.

## Installation

```
pip install "remote-store[sftp]"
```

This pulls in `paramiko` and `tenacity` (for automatic retry on transient SSH errors).

## Usage

```
from remote_store import BackendConfig, RegistryConfig, Registry, StoreProfile

config = RegistryConfig(
    backends={
        "my-sftp": BackendConfig(
            type="sftp",
            options={
                "host": "files.example.com",
                "username": "deploy",
                "password": "secret",
                "base_path": "/srv/data",
            },
        ),
    },
    stores={"uploads": StoreProfile(backend="my-sftp", root_path="uploads")},
)

with Registry(config) as registry:
    store = registry.get_store("uploads")
    store.write("report.csv", b"col1,col2\n1,2\n")
    data = store.read_bytes("report.csv")
```

### Key-based authentication

```
from remote_store.backends import SFTPBackend, SFTPUtils

pkey = SFTPUtils.load_private_key("/path/to/id_rsa", from_file=True)

backend = SFTPBackend(
    host="files.example.com",
    username="deploy",
    pkey=pkey,
)
```

Or load a PEM string directly (useful for secrets managers like Azure Key Vault):

```
pkey = SFTPUtils.load_private_key(pem_string)
```

## Options

| Option            | Type            | Default              | Description                                                                                                                             |
| ----------------- | --------------- | -------------------- | --------------------------------------------------------------------------------------------------------------------------------------- |
| `host`            | `str`           | *(required)*         | SFTP server hostname                                                                                                                    |
| `port`            | `int`           | `22`                 | SSH port                                                                                                                                |
| `username`        | `str`           | `None`               | SSH username                                                                                                                            |
| `password`        | `str`           | `None`               | SSH password                                                                                                                            |
| `pkey`            | `paramiko.PKey` | `None`               | Private key for key-based auth                                                                                                          |
| `base_path`       | `str`           | `"/"`                | Root path on the remote server                                                                                                          |
| `host_key_policy` | `HostKeyPolicy` | `STRICT`             | Host key verification mode (see below)                                                                                                  |
| `known_host_keys` | `str`           | `None`               | Known-hosts string (code-level override)                                                                                                |
| `host_keys_path`  | `str`           | `~/.ssh/known_hosts` | Path to known_hosts file                                                                                                                |
| `config`          | `dict`          | `None`               | Config dict (may contain `known_host_keys`)                                                                                             |
| `timeout`         | `int`           | `10`                 | Connect-phase timeout in seconds (connect, banner, auth, channel open)                                                                  |
| `io_timeout`      | `float`         | `120.0`              | Seconds a blocking read or write on the open channel may stall before failing. Pass `None` for no bound; `0` and negatives are rejected |
| `connect_kwargs`  | `dict`          | `None`               | Extra kwargs passed to `SSHClient.connect()`                                                                                            |

### Bounding a stalled transfer

`timeout` covers only the connect phase. Once the channel is open, paramiko places no bound of its own on reads, so a peer that completes the handshake and then stops sending mid-transfer would block indefinitely — holding whatever pool slot or worker the transfer was running on, with no error to act on. `io_timeout` is what stops that, and it is armed for you.

`io_timeout` bounds the silence *between* bytes rather than the transfer as a whole, which is what makes it usable on slow links: a multi-gigabyte fetch that takes an hour is unaffected, while a flow that goes quiet for longer than the bound raises [`BackendUnavailable`](https://docs.remotestore.dev/stable/reference/api/errors/index.md). That error names the stall and the value that fired (`SFTP channel stalled: no data within io_timeout=120.0s`), and the backend logs it once at `WARNING`, so a stall is distinguishable from any other `BackendUnavailable` in a log you read later. What it does not say is whether the operation happened — [a stalled operation may have succeeded](#capabilities).

**It is on by default, at 120 seconds.** You get the bound without asking for it, so nothing you write hangs forever on a silent peer. What you configure is whether that value suits your server:

```
from remote_store.backends import SFTPBackend

backend = SFTPBackend(
    host="files.example.com",
    username="deploy",
    io_timeout=300,   # a server that legitimately goes quiet for longer
)
```

**Size it against the longest legitimate pause your server can produce, not against total transfer time.** Raising it costs only how quickly a stall is noticed, which is cheap — the bound is on silence between bytes, so a slow transfer is unaffected at any value. Lowering it is the riskier direction: a server that goes quiet for legitimate reasons, such as an antivirus or dedup appliance scanning a large file when you open it, starts failing intermittently, which looks like network flakiness and is harder to diagnose than the hang the bound replaced.

To turn the bound off entirely, pass `None`:

```
backend = SFTPBackend(host="files.example.com", username="deploy", io_timeout=None)
```

`0` is **not** how you ask for that — it is rejected with `ValueError`, because paramiko reads `0` as non-blocking rather than as a bound, and every SFTP operation waits on a reply, so all of them would fail at once.

It is an ordinary option, so it is equally settable from a declarative config:

```
BackendConfig(
    type="sftp",
    options={"host": "files.example.com", "username": "deploy", "io_timeout": 300},
)
```

**Opting out declaratively takes an explicit null, not an omitted key** — leaving `io_timeout` out selects the default, as it does in Python. In YAML that is `io_timeout: null`; TOML has no null literal, so a TOML-configured store that needs an unbounded channel has to construct the backend in code.

The bound is re-applied on every reconnect, including the transparent ones the backend performs after a dropped connection, and it covers most of the SFTP session setup as well as later transfers. Setting it through the [escape hatch](#escape-hatch) instead does not survive those reconnects, because each one opens a fresh channel.

Two limits, different in kind

**A wedged SSH daemon is not bounded at all.** A server that opens the SSH channel and then never answers the `sftp` subsystem request still hangs, regardless of `io_timeout`: paramiko waits for that reply on an untimed event, so no channel timeout applies, and every reconnect re-enters that window. It needs a wedged SSH daemon rather than a wedged SFTP subsystem, so it is rarer than the stall this option does cover — but if a peer hangs despite the bound, this is the shape to suspect.

**Releasing a handle that never failed is bounded but silent.** Closing a stream you have not read to a failure on a stalled connection waits one `io_timeout` and then returns normally: paramiko catches that timeout inside its own close, so nothing is raised, `remote-store` logs nothing, and the dead connection stays cached for the next operation to wait on again. You see the delay, not the cause — paramiko's own DEBUG logging shows the close going out, but nothing there names the stall either. A stream whose read *did* fail costs nothing extra: that close is skipped.

A stall that surfaces is reported, and no stall is retried: the connect-phase `RetryPolicy` does not cover one, so a partially consumed stream is never silently restarted underneath you. A streamed **read** raises rather than returning short, so a truncated transfer is never mistaken for a complete one — discard the handle and start again, since the bytes already delivered are a valid prefix but the handle is dead. The backend drops the dead client, so the next operation reconnects.

Seeking to the end of a stream (`stream.seek(0, os.SEEK_END)`) asks the server for the file's size, so it is bounded and reported like any other operation on the channel. Worth knowing because you may not be the one writing the seek: `read_seekable()` hands the stream to analytical readers such as PyArrow, and a reader that sizes a file internally reaches it the same way — for files large enough to stream. The [PyArrow adapter](https://docs.remotestore.dev/stable/guides/pyarrow-adapter/index.md) materialises anything at or below its `materialization_threshold` and never seeks the stream at all.

## Preflight host-key discovery

To populate a committed `host.keys` file without going through a TOFU connect first, use [`SFTPUtils.scan_host_keys(host, port=22)`](https://docs.remotestore.dev/stable/reference/api/sftp-utils/index.md). It opens a transport, captures the server's *negotiated* host key (no authentication), and returns a single `known_hosts`-formatted line ready to commit:

```
from pathlib import Path
from remote_store.backends import SFTPUtils

entry = SFTPUtils.scan_host_keys("sftp.example.com")
Path("host.keys").write_text(entry + "\n")
```

For non-default ports the entry uses the OpenSSH `[host]:port` form. Network failures (host unreachable, port refused, DNS error) raise `OSError`; KEX failures (legacy server offering only `ssh-rsa`) raise `paramiko.SSHException` — call `enable_ssh_rsa_compat()` first in that case.

`scan_host_keys()` returns the **negotiated** key for one handshake, not every key type the server offers. If the server publishes multiple key types and paramiko later negotiates a type other than the pinned line, the connection fails with `BadHostKeyException`. Call the helper multiple times under different `disabled_algorithms` settings if you need full-type coverage.

## Host Key Verification

The `HostKeyPolicy` enum controls how unknown host keys are handled:

| Policy               | Behaviour                                         | Use case                |
| -------------------- | ------------------------------------------------- | ----------------------- |
| `STRICT`             | Reject unknown hosts. Key must be in known_hosts. | Production (default)    |
| `TRUST_ON_FIRST_USE` | Accept and save on first connect, verify after.   | First-time server setup |
| `AUTO_ADD`           | Accept any key silently.                          | Dev / testing only      |

Known host keys are resolved in order (first match wins):

1. `known_host_keys` constructor parameter
1. `config["known_host_keys"]` dict value
1. `SFTP_KNOWN_HOST_KEYS` environment variable
1. `host_keys_path` file on disk (default: `~/.ssh/known_hosts`)

```
from remote_store.backends import SFTPBackend, SFTPUtils

# Development / testing
backend = SFTPBackend(
    host="localhost",
    port=2222,
    username="test",
    password="test",
    host_key_policy=SFTPUtils.HostKeyPolicy.AUTO_ADD,
)
```

## Legacy Servers (`ssh-rsa` / SHA-1)

**What changed.** Paramiko 5.0 removed `ssh-rsa` from its host-key defaults — empirically verified, see the [research note](https://github.com/haalfi/remote-store/blob/master/sdd/research/research-bk-198-paramiko-ssh-rsa-empirical.md) for the version matrix.

- **paramiko `< 5`** ships `ssh-rsa` in defaults at all four negotiation sites. A freshly-imported paramiko already negotiates against an `ssh-rsa`-only server out of the box.
- **paramiko `>= 5`** has `ssh-rsa` removed from all four sites. Connecting to an `ssh-rsa`-only server raises `IncompatiblePeer: Incompatible ssh peer (no acceptable host key)` during KEX, before authentication is attempted.

The `[sftp]` extra has no upper bound on paramiko, so current resolvers pick paramiko 5+ by default. New installs hit the failure unless they call the helper described below.

### Diagnose first

Before mutating paramiko's defaults, confirm the failure shape. An `IncompatiblePeer` error from paramiko wraps four distinct negotiation failures — host key, KEX, cipher, or MAC — and only the first is fixed by `enable_ssh_rsa_compat()`. The other three need `connect_kwargs={"disabled_algorithms": ...}` instead. [`SFTPUtils.scan_host_algorithms()`](https://docs.remotestore.dev/stable/reference/api/sftp-utils/#remote_store.backends.SFTPUtils.scan_host_algorithms) parses the server's `SSH_MSG_KEXINIT` advertisement (RFC 4253 § 7.1) over a raw socket — no paramiko, no authentication, so the result reflects exactly what the server advertises:

```
from remote_store.backends import SFTPUtils

info = SFTPUtils.scan_host_algorithms("legacy.example.com")
print("host-key algos:", info["server_host_key_algorithms"])
print("kex algos:     ", info["kex_algorithms"])
```

If `server_host_key_algorithms == ["ssh-rsa"]`, this guide applies and the next subsection is the fix. If it's `kex_algorithms` that's narrow (e.g. only `diffie-hellman-group14-sha1`), `enable_ssh_rsa_compat()` will not help; widen the relevant list via `SFTPBackend(connect_kwargs={"disabled_algorithms": ...})`.

### Fix: re-enable `ssh-rsa` at process startup

[`SFTPUtils.enable_ssh_rsa_compat()`](https://docs.remotestore.dev/stable/reference/api/sftp-utils/index.md) adds `ssh-rsa` to all four paramiko host-key sites in one call. It is a no-op on paramiko `< 5` (all four guards short-circuit) and the required recovery path on paramiko `>= 5`:

```
from remote_store.backends import SFTPUtils

# Call once, before any SFTPBackend connect to a legacy server.
SFTPUtils.enable_ssh_rsa_compat()
```

If you observe `IncompatiblePeer: no acceptable kex algorithm`

KEX / cipher / MAC negotiation failures are a separate problem; `enable_ssh_rsa_compat()` does not help. Widen the relevant algorithm list via the `connect_kwargs={"disabled_algorithms": ...}` SFTP constructor argument instead.

Security tradeoff

This is **process-global**: every paramiko transport in the process will then accept SHA-1 host keys. Only enable this if every server your process connects to is under your operational control, and push server operators to upgrade to `rsa-sha2-256`/`rsa-sha2-512` so the shim can be removed.

### Alternative: pin `paramiko<5`

Pinning `paramiko<5` keeps the consumer on the empirically-verified compatible range (`>= 3.0,< 5`) and avoids the helper entirely. The tradeoff is freezing on paramiko 4.x while upstream moves on:

| Approach                  | Loses                                                                              |
| ------------------------- | ---------------------------------------------------------------------------------- |
| `paramiko<5` pin          | Future paramiko 5+ improvements (perf, protocol features, CVE fixes once 4.x EOLs) |
| `enable_ssh_rsa_compat()` | Process-wide SHA-1 host-key acceptance only                                        |

Either composes cleanly with the library's `[sftp]` floor of `paramiko>=3.1`. To pin the consumer must override at their own dependency layer (e.g. `requirements.txt` line `paramiko>=3.1,<5`).

## Connection Behaviour

- **Lazy connect** — no network call happens during construction. The SSH/SFTP connection is established on the first operation.
- **Auto-reconnect** — if the connection goes stale between operations, the backend reconnects transparently.
- **Retry** — transient SSH errors (`SSHException`, `OSError`, `EOFError`) are retried up to 3 times with exponential backoff (2 s min, 10 s max). Retry covers establishing the SSH connection only; nothing after that is restarted, and a stall bounded by `io_timeout` is reported to the caller unless it is one of the silent cases above.
- **Stall detection** — on by default: [`io_timeout`](#bounding-a-stalled-transfer) bounds a read or write that stops making progress on an open channel at 120 s. Tune it, or pass `None` to opt out.
- **Single connection, not thread-safe** — each `SFTPBackend` instance holds one paramiko `SFTPClient`. Calling it from multiple threads simultaneously (e.g. via `SyncBackendAdapter` + `asyncio.gather`) races on the shared socket. Create one `SFTPBackend` per thread for parallel workloads.

## Capabilities

The SFTP backend supports all capabilities except `GLOB` and `ATOMIC_MOVE`. See the [capabilities matrix](https://docs.remotestore.dev/stable/reference/capabilities-matrix/index.md) for full details.

Atomic write caveat

Atomic writes use a temp file (`.~tmp.<name>.<uuid>`) and rename. If the connection drops between write and rename, the destination is untouched but the orphan temp file will remain on the server. If it drops *during* the rename, see the danger note below — the write may have landed, and on the fallback path a `.~bak.<name>.<uuid>` may hold your previous file.

A stalled operation may have succeeded

When a transfer stalls, the timeout tells you **no reply came back**. It does not tell you the server never got the request. If the silence was on the return path, the server did the work and only the answer was lost — so every operation here has a state where it did what you asked and raised `BackendUnavailable` anyway.

The general rule is that **any amount of the operation may have happened, from none of it to all of it**, and the error does not tell you which. The states below are the ones worth naming, not a complete list:

| Operation                          | What a `BackendUnavailable` may have left                                                                                                                                                             |
| ---------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `write()`                          | The destination unchanged, absent, **emptied**, holding an unpredictable prefix, or **written in full**                                                                                               |
| `copy()`                           | The same five, at `dst`; the source is never affected                                                                                                                                                 |
| `move()`                           | The paths unchanged, **the move completed** (source gone), or **the destination path empty** with its old content in a `.~bak.<name>.<uuid>` file and the source still there                          |
| `write_atomic()` / `open_atomic()` | The destination unchanged, often with an orphan temp; **the write completed**; or **the destination path empty** with its old content in a `.~bak.<name>.<uuid>` file and your data in an orphan temp |

The empty-destination cases come from a rename fallback, which cannot rename onto a path that is occupied: it moves the old file aside first and moves it back if the rename fails. Over a dropped connection it cannot move anything back — **nothing is lost, but the path you wrote to is not the file you had.** Your previous file is beside it as `.~bak.<name>.<uuid>`, and your payload is in the `.~tmp.<name>.<uuid>` for `write_atomic()` / `open_atomic()`, or still at `src` for `move()`, which never writes a temp. The fallback is not confined to old servers: any rename that *fails* for a reason the backend cannot attribute to a dropped connection takes that path. It also needs `overwrite=True`: with the default the call raises `AlreadyExists` before the fallback is reached. No example failure is given: which ones reach it depends on guards that differ per operation, and every attempt to name one here has been wrong.

So:

- **Do not treat a failure as a no-op.** Re-check the state before acting on it. A failed `move()` that actually succeeded gives `NotFound` on retry; a failed `write(..., overwrite=True)` may have truncated your previous file without replacing it.
- **Retry with `overwrite=True`.** The path is usually still occupied, so a plain retry raises `AlreadyExists` instead of retrying.
- **Do not resume from a partial file.** The prefix length depends on buffering you cannot see, so appending to it corrupts the file. Discard and re-write from the start.
- **Look for a `.~bak.` file beside the target** before you re-create anything. On the fallback path it is your previous file, left where the call could not put it back. Your payload is in the `.~tmp.` beside it for `write_atomic()` / `open_atomic()`, and still at `src` for `move()`.

**`write_atomic()` is still the right choice when readers must never see a half-written file** (see the caveat above, and [atomicity semantics](https://docs.remotestore.dev/stable/explanation/concurrency/index.md)): no reader ever observes a partial file at the destination. What it does not promise is that a reported failure means nothing happened, nor that your existing file survives one: a stall that loses the reply to a *successful* rename has replaced it, and nothing was kept. The fallback path is the one that keeps a copy, because it is the one that moved your file aside to begin with.

Parent directories created for a write remain behind in every case — a failed write is not a rollback.

A `.~bak.` file can outlive a call that did not stall — including one that succeeded

The note above is about `BackendUnavailable`. The rename fallback can also leave a `.~bak.<name>.<uuid>` behind on a connection that never dropped, by two routes. It moves your file aside, and the server then refuses to move it back. Or the move-aside itself lands and the server fails to say so, in which case nothing is put back because the call never learns there is anything to put back. Either way you get `PermissionDenied` (or another mapped error) with your previous file under that name instead of at its path. Nothing is lost, and the recovery is the same — read the target, then the `.~bak.` beside it.

**Read the target before restoring a backup.** A `.~bak.` also outlives a call that *succeeded* — the tidy-up that removes it is best-effort, so a server that refuses it, or a connection that drops first, leaves the backup behind with nothing raised. There the target already holds your new content, and copying the backup over it would undo the write. The file's name does not say which case you are in; the target's contents do.

Move fallback

`move()` tries `posix_rename` (atomic), then standard `rename()`, then copy + delete as a last resort. Most servers support at least `rename()`.

TOCTOU on `overwrite=False`

Like most backends, the exists-check and write are separate operations. Concurrent writers can both pass the check.

See the [Concurrency and Atomicity Guarantees](https://docs.remotestore.dev/stable/explanation/concurrency/index.md) guide for details and workarounds.

## Escape Hatch

Access the underlying `paramiko.SFTPClient` when you need protocol-level features:

```
import paramiko

sftp_client = backend.unwrap(paramiko.SFTPClient)
sftp_client.listdir_attr("/custom/path")
```

## See also

- [Capabilities matrix](https://docs.remotestore.dev/stable/reference/capabilities-matrix/index.md)
- [API reference](https://docs.remotestore.dev/stable/reference/api/store/index.md)
- [SFTP utilities reference](https://docs.remotestore.dev/stable/reference/api/sftp-utils/index.md) — `scan_host_keys`, `enable_ssh_rsa_compat`, `HostKeyPolicy`
- [Example script](https://docs.remotestore.dev/stable/tutorial/examples/sftp-backend/index.md)

## API Reference

## SFTPBackend

```
SFTPBackend(
    host: str,
    *,
    port: int = 22,
    username: str | None = None,
    password: str | Secret | None = None,
    pkey: Any = None,
    base_path: str = "/",
    host_key_policy: HostKeyPolicy | str = STRICT,
    known_host_keys: str | None = None,
    host_keys_path: str | None = None,
    config: dict[str, Any] | None = None,
    timeout: int = 10,
    io_timeout: float | None = 120.0,
    connect_kwargs: dict[str, Any] | None = None,
    retry: RetryPolicy | None = None,
)
```

Bases: `Backend`

SFTP backend using pure paramiko.

`move()` attempts `posix_rename` (atomic on POSIX-compliant servers), then falls back to `rename`, and finally to a stream copy followed by a delete. Because atomicity cannot be guaranteed across all servers, `ATOMIC_MOVE` is not declared.

Warning

**Not thread-safe for concurrent access.** This backend maintains a single SSH/SFTP connection (paramiko `SFTPClient`), which is not safe to call from multiple threads simultaneously. Concurrent calls via `SyncBackendAdapter` and `asyncio.gather` will race on the shared socket and may hang or corrupt responses. Create one `SFTPBackend` instance per thread if you need parallel operations.

Parameters:

- **`host`** (`str`) – SFTP server hostname (required, non-empty).
- **`port`** (`int`, default: `22` ) – SSH port (default: 22).
- **`username`** (`str | None`, default: `None` ) – SSH username.
- **`password`** (`str | Secret | None`, default: `None` ) – SSH password.
- **`pkey`** (`Any`, default: `None` ) – paramiko.PKey instance for key-based auth.
- **`base_path`** (`str`, default: `'/'` ) – Root path on the remote server (default: /).
- **`host_key_policy`** (`HostKeyPolicy | str`, default: `STRICT` ) – Host key verification policy (see SFTPUtils.HostKeyPolicy). Accepts enum value or string.
- **`known_host_keys`** (`str | None`, default: `None` ) – Known hosts string (code-level override).
- **`host_keys_path`** (`str | None`, default: `None` ) – Path to known_hosts file (default: ~/.ssh/known_hosts).
- **`config`** (`dict[str, Any] | None`, default: `None` ) – Optional config dict (may contain known_host_keys).
- **`timeout`** (`int`, default: `10` ) – SSH connection timeout in seconds. Bounds the connect phase only — it is passed as paramiko's timeout / banner_timeout / auth_timeout / channel_timeout, the last of which bounds channel open, not traffic on an opened channel.
- **`io_timeout`** (`float | None`, default: `120.0` ) – Seconds a single blocking read or write on the open SFTP channel may go without progress before it fails. Defaults to 120.0; pass None for no bound. Applied with Channel.settimeout() on every connect and every reconnect, and armed before the SFTP session setup, so a peer that completes the SSH handshake and then falls silent is bounded there too. This is silence between bytes, not a deadline for the whole transfer: a large file over a slow link is unaffected however long it takes, while a peer that stops sending mid-transfer raises BackendUnavailable instead of blocking forever. That asymmetry is what picks the default: raising it costs only detection latency, since a slow link is unaffected at any value, while lowering it turns a healthy-but-quiet server — an antivirus or dedup appliance scanning a large file on open() — into intermittent BackendUnavailable, which reads as network flakiness and is harder to diagnose than the hang it replaces. Must be positive when set; 0 is rejected because paramiko reads it as non-blocking, so it is not the way to ask for no bound — None is. A streamed read raises rather than returning short, so a truncated transfer is never mistaken for a complete one. Seeking to the end of a stream (seek(0, SEEK_END)) asks the server for the file size, so a stall there raises like any other. Every stall that surfaces is reported, and none is retried: the retry policy wraps the SSH connect call alone, so a partially consumed stream is never silently restarted — and a stall during session setup is reported too, rather than retried as a connect failure would be.
- **`connect_kwargs`** (`dict[str, Any] | None`, default: `None` ) – Extra kwargs passed to SSHClient.connect().

### check_health

```
check_health() -> None
```

Confirm the SFTP connection works by `stat`-ing the base path.

Establishes the SSH/SFTP connection lazily if needed (retried at connection scope) and issues one `stat` round-trip.

Raises:

- `NotFound` – If the configured base path does not exist.
- `PermissionDenied` – If access to the base path is denied (EACCES or EPERM). Not necessarily by the server: the mapping sees only the exception, so a connect this machine refused locally — a firewall rule — reaches this too, as Permission denied: with an empty key. Distinguishing the two needs connect-time context and is tracked separately.
- `BackendUnavailable` – If the SSH/SFTP connection cannot be established.

### resolve

```
resolve(path: str) -> ResolutionPlan
```

Return a `ResolutionPlan` with SFTP-specific details.

Parameters:

- **`path`** (`str`) – Backend-relative key.

Returns:

- `ResolutionPlan` – Plan with kind="sftp" and details containing
- `ResolutionPlan` – host, port, and base_path.

### exists

```
exists(path: str) -> bool
```

Return `True` if a file or folder exists at *path*; never `NotFound`.

Issues one `stat` round-trip; a missing path returns `False`.

Raises:

- `PermissionDenied` – If the server denies access (EACCES or EPERM).
- `BackendUnavailable` – If the SSH/SFTP connection cannot be established or fails.

### is_file

```
is_file(path: str) -> bool
```

Return `True` if *path* is an existing regular file (`False` if absent or a folder).

Raises:

- `PermissionDenied` – If the server denies access (EACCES or EPERM).
- `BackendUnavailable` – If the SSH/SFTP connection cannot be established or fails.

### is_folder

```
is_folder(path: str) -> bool
```

Return `True` if *path* is an existing directory (`False` if absent or a file).

Raises:

- `PermissionDenied` – If the server denies access (EACCES or EPERM).
- `BackendUnavailable` – If the SSH/SFTP connection cannot be established or fails.

### read

```
read(path: str) -> BinaryIO
```

Open *path* for reading and return a buffered, streaming handle.

Reads lazily over the SFTP channel (wrapped in a `BufferedReader`), so memory stays constant regardless of file size. Because the read is deferred, *path* being a directory must be rejected before the handle is returned — a real OpenSSH server opens a directory for reading without error and only fails on the first read, which this streaming path never issues itself. So this one read path keeps an eager type check, unlike `read_bytes` (which reads immediately and classifies on failure).

Raises:

- `NotFound` – If the file does not exist, or a path component is itself a file.
- `InvalidPath` – If path names a directory.
- `PermissionDenied` – If the server denies access (EACCES or EPERM).
- `BackendUnavailable` – If the SSH/SFTP connection cannot be established or fails mid-read.

### read_bytes

```
read_bytes(path: str) -> bytes
```

Read and return the full file content as bytes.

Prefetches and materialises the whole file in memory (unlike the lazy `read` stream).

Directory rejection is lazy (unlike `read`, which stats eagerly): a directory target raises `InvalidPath` only because the read of it fails. This assumes the server either refuses to open a directory for reading or reports a non-zero directory `st_size` — both hold on OpenSSH, where a directory reports `st_size == 4096`. A non-standard server that opens a directory for reading *and* reports `st_size == 0` would make this return empty bytes rather than raising `InvalidPath`.

Raises:

- `NotFound` – If the file does not exist, or a path component is itself a file.
- `InvalidPath` – If path names a directory (subject to the server assumption above).
- `PermissionDenied` – If the server denies access (EACCES or EPERM).
- `BackendUnavailable` – If the SSH/SFTP connection cannot be established or fails mid-read.

### write

```
write(
    path: str,
    content: WritableContent,
    *,
    overwrite: bool = False,
    metadata: Mapping[str, str] | None = None,
) -> WriteResult
```

Write *content* to *path*, streaming it over the SFTP channel.

The bytes are streamed straight to the destination file (no temp-and-rename), so a failed write may already have changed that path. A `BackendUnavailable` means no reply came back, not that the server never acted. **Any amount of the write may have happened, from none of it to all of it**, and the error does not say which: the destination may be untouched, emptied (the server truncated on open and the old content is gone), holding an unpredictable prefix of *content*, or holding it in full. Retry with `overwrite=True` (the path is usually still occupied) and re-write from the start rather than appending to what is there — the prefix length depends on buffering the caller cannot observe. Use `write_atomic` when readers must never see a half-written file. Missing parent directories are created first (one `stat` per ancestor) and are **not** removed when the write fails.

The returned `WriteResult` carries `size` (counted during upload) and `source="native"`, but every rich field — `last_modified`, `etag`, `version_id`, `digest` — is `None`: SFTP's write response carries no metadata at all, and the backend does not stat afterwards to fetch any. Call `get_file_info` when the metadata is needed.

Raises:

- `AlreadyExists` – If the file exists and overwrite is False.
- `InvalidPath` – If path is the store root, or names a directory, or an ancestor of path exists as a regular file.
- `PermissionDenied` – If the server denies access (EACCES or EPERM).
- `BackendUnavailable` – If the SSH/SFTP connection cannot be established or fails mid-write.

### write_atomic

```
write_atomic(
    path: str,
    content: WritableContent,
    *,
    overwrite: bool = False,
    metadata: Mapping[str, str] | None = None,
) -> WriteResult
```

Write *content* to *path* atomically via a temp file plus server rename.

Readers never observe a partial file: the body is streamed to a hidden temp file in the destination directory, then promoted with `posix_rename` (atomic on POSIX-compliant servers). Servers without `posix_rename` fall back to a plain `rename` (non-atomic overwrite: the target is moved aside first, and moved back if the rename fails).

A failure *before* the promote leaves the destination untouched, and the temp file is cleaned up **best-effort**: the cleanup is deliberately skipped when the failure is itself a dropped connection, so a stall leaves an orphan `.~tmp.<name>.<uuid8>` beside the target rather than stalling again on an unlink the server cannot answer. A stall whose lost reply is the **promote itself** is different: the rename was performed, so the destination holds the new content and no temp remains, while the caller is told `BackendUnavailable`. What is guaranteed is that no reader ever sees a half-written file — not that a reported failure means the write did not happen.

The **rename-fallback** path cannot rename onto an occupied path, so it displaces the destination first and puts it back if the promote fails. Ordinarily the restore succeeds and the old content is back at its own path. It is best-effort, though: a dropped connection stops it being attempted at all, and a live server can refuse it — and *then* the old content is beside the target as `.~bak.<name>.<uuid8>` instead. That path is entered when `posix_rename` fails for a reason `_probe_is_futile` does not recognise — neither a dropped connection nor a host the reconnect could not reach — and the target is not a directory, so it is not confined to servers lacking the extension.

As in `write`, the returned `WriteResult` carries `size` and `source="native"` but leaves every rich field (`last_modified` / `etag` / `version_id` / `digest`) `None`.

Raises:

- `AlreadyExists` – If the file exists and overwrite is False.
- `InvalidPath` – If path is the store root, or names a directory, or an ancestor of path exists as a regular file.
- `PermissionDenied` – If the server denies access (EACCES or EPERM).
- `BackendUnavailable` – If the SSH/SFTP connection cannot be established or fails.

### open_atomic

```
open_atomic(
    path: str, *, overwrite: bool = False
) -> Iterator[BinaryIO]
```

Yield a writable handle promoted to *path* atomically on clean exit.

Writes stream to a hidden temp file in the destination directory; on clean exit it is promoted with `posix_rename` (atomic on POSIX servers, falling back to `rename`). On an exception raised by the caller's own code, the temp file is removed and *path* is left untouched.

**A dropped connection is the exception to both halves**, on the same terms as `write_atomic`, whose docstring carries the detail. The temp cleanup is deliberately skipped when the failure is itself a dropped-connection signal, so an orphan `.~tmp.<name>.<uuid8>` remains; a stall whose lost reply is the promote leaves the rename *performed*, so *path* holds the new content; and on the rename-fallback path a dropped connection can leave *path* empty with its old content displaced to `.~bak.<name>.<uuid8>`. No reader ever sees a half-written file, which is what the atomicity buys — but a reported failure means neither that nothing happened nor that *path* still holds what it held.

Raises:

- `AlreadyExists` – If the file exists and overwrite is False.
- `InvalidPath` – If path is the store root, or names a directory, or an ancestor of path exists as a regular file.
- `PermissionDenied` – If the server denies access (EACCES or EPERM).
- `BackendUnavailable` – If the SSH/SFTP connection cannot be established or fails.

### delete

```
delete(path: str, *, missing_ok: bool = False) -> None
```

Delete the file at *path*.

Raises:

- `NotFound` – If the file does not exist (or a path component is itself a file) and missing_ok is False.
- `InvalidPath` – If path names a directory (use delete_folder).
- `PermissionDenied` – If the server denies access (EACCES or EPERM).
- `BackendUnavailable` – If the SSH/SFTP connection cannot be established or fails.

### delete_folder

```
delete_folder(
    path: str,
    *,
    recursive: bool = False,
    missing_ok: bool = False,
) -> None
```

Delete the folder at *path*.

`recursive=True` walks and removes the subtree bottom-up (one round-trip per entry — not atomic; an interruption can leave the tree partially removed). `recursive=False` removes only an empty folder after checking it has no entries.

Raises:

- `NotFound` – If the folder does not exist and missing_ok is False.
- `InvalidPath` – If path names a file, not a folder.
- `DirectoryNotEmpty` – If the folder is non-empty and recursive is False.
- `PermissionDenied` – If the server denies access (EACCES or EPERM).
- `BackendUnavailable` – If the SSH/SFTP connection cannot be established or fails.

### list_files

```
list_files(
    path: str,
    *,
    recursive: bool = False,
    max_depth: int | None = None,
) -> Iterator[FileInfo]
```

Yield files under *path*, one `FileInfo` at a time.

Lazily walks the remote directory (`listdir_attr`); a missing *path* yields nothing. `recursive` descends via one directory-listing round-trip per folder (`max_depth` bounds the descent). Failures other than a missing path surface during iteration, mapped as they are for the single-object operations — a denied listing raises `PermissionDenied` (`EACCES` or `EPERM`), a dropped or unreachable connection `BackendUnavailable`, and anything else the base `RemoteStoreError`.

### list_folders

```
list_folders(path: str) -> Iterator[FolderEntry]
```

Yield immediate subfolders of *path* as `FolderEntry` records.

One directory-listing round-trip; a missing *path* yields nothing. Other failures surface during iteration, mapped as in `list_files` — a denied listing raises `PermissionDenied` (`EACCES` or `EPERM`).

### iter_children

```
iter_children(
    path: str,
) -> Iterator[FileInfo | FolderEntry]
```

Yield the immediate files and folders under *path* in one listing.

Overrides the base two-pass default with a single `listdir_attr` round-trip, yielding `FileInfo` for files and `FolderEntry` for folders. A missing *path* yields nothing; other failures surface during iteration, mapped as in `list_files` — a denied listing raises `PermissionDenied` (`EACCES` or `EPERM`).

### get_file_info

```
get_file_info(path: str) -> FileInfo
```

Return metadata for the file at *path* from a single `stat` round-trip.

Raises:

- `NotFound` – If the file does not exist.
- `InvalidPath` – If path names a directory, not a file.
- `PermissionDenied` – If the server denies access (EACCES or EPERM).
- `BackendUnavailable` – If the SSH/SFTP connection cannot be established or fails.

### get_folder_info

```
get_folder_info(path: str) -> FolderInfo
```

Return aggregate metadata for the folder at *path*.

File count, total size, and latest modification time are gathered by recursively walking the whole subtree (one listing round-trip per folder), so cost scales with the number of descendants.

Raises:

- `NotFound` – If the folder does not exist.
- `InvalidPath` – If path names a file, not a folder.
- `PermissionDenied` – If the server denies access (EACCES or EPERM).
- `BackendUnavailable` – If the SSH/SFTP connection cannot be established or fails.

### move

```
move(
    src: str, dst: str, *, overwrite: bool = False
) -> None
```

Move or rename the file *src* to *dst*.

Tries `posix_rename` first (atomic on POSIX-compliant servers), then a plain `rename`, and finally a stream copy-then-delete. Because the outcome depends on server support, atomicity is not guaranteed across all servers and `ATOMIC_MOVE` is not declared. `src == dst` is a no-op; missing parent directories of *dst* are created first.

A `BackendUnavailable` here means no reply came back, not that the rename did not happen: if the stall swallowed the *reply* to `posix_rename`, the server performed the move and the caller is told it failed. Re-check both paths before retrying — a blind retry of a move that actually succeeded raises `NotFound` on a source that is gone. There is a further state on the **rename-fallback** path, which displaces the destination before renaming onto it: a stall in that window leaves the destination path empty, its old content under `.~bak.<name>.<uuid8>` and the source still there, because the restore is best-effort and a dropped connection stops it being attempted. That path is entered when `posix_rename` fails for a reason `_probe_is_futile` does not recognise — neither a dropped connection nor a host the reconnect could not reach — and the destination is not a directory, so it is not confined to servers lacking `posix-rename@openssh.com`.

Raises:

- `NotFound` – If src does not exist.
- `InvalidPath` – If src or dst is the store root, or names a directory, or an ancestor of dst exists as a regular file.
- `AlreadyExists` – If dst exists, src != dst, and overwrite is False.
- `PermissionDenied` – If the server denies access (EACCES or EPERM).
- `BackendUnavailable` – If the SSH/SFTP connection cannot be established or fails.

### copy

```
copy(
    src: str, dst: str, *, overwrite: bool = False
) -> None
```

Copy the file *src* to *dst* by streaming through the client.

SFTP has no server-side copy, so the bytes round-trip through the client (download then upload). The destination is opened and streamed to directly, exactly as in `write`, so this is not atomic: an interruption may leave *dst* untouched, emptied, holding an unpredictable prefix of *src*, or holding it in full, and retrying needs `overwrite=True`. *src* is untouched either way. `src == dst` is a no-op; missing parent directories of *dst* are created first and are not removed when the copy fails.

Raises:

- `NotFound` – If src does not exist.
- `InvalidPath` – If src or dst is the store root, or names a directory, or an ancestor of dst exists as a regular file.
- `AlreadyExists` – If dst exists, src != dst, and overwrite is False.
- `PermissionDenied` – If the server denies access (EACCES or EPERM).
- `BackendUnavailable` – If the SSH/SFTP connection cannot be established or fails.
